# agentic-ai-platform

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs-check.yml  release.yml
docs/architecture/: api-design.md  data-flow.md  high-level-architecture.md  observability-and-reliability.md  runtime-model.md  security-and-guardrails.md  storage-design.md  system-overview.md  tradeoffs.md
docs/decisions/: adr-001-monorepo-and-service-boundaries.md  adr-002-multi-agent-runtime.md  adr-003-postgres-and-pgvector.md  adr-004-policy-layer-separation.md
docs/diagrams/: execution-sequence.drawio  high-level-architecture.drawio  storage-view.drawio  system-context.drawio
docs/overview/: problem-statement.md  product-summary.md  project-constitution.md  project-end-state.md  roadmap.md  scope-and-non-goals.md  target-users.md  use-cases.md
docs/runbooks/: incident-workflow-demo.md  local-development.md  replaying-executions.md
docs/workflows/: cost-attribution.md  incident-triage.md  mukti-agent.md  policy-aware-execution.md
examples/cost-attribution-demo/: README.md
examples/incident-triage-demo/: README.md
examples/policy-demo/: README.md
infra/cloud-run/: README.md
infra/db/migrations/: 001_initial_schema.sql  002_operator_feedback.sql
infra/docker/: README.md
infra/kubernetes/: README.md
infra/monitoring/: README.md
scripts/bootstrap/: README.md
scripts/ci/: README.md
scripts/local-dev/: README.md
scripts/replay/: README.md
scripts/seed-data/: README.md
services/api-gateway/app/: README.md
services/api-gateway/tests/: README.md
services/feedback-service/: README.md  pyproject.toml
services/feedback-service/app/: README.md
services/feedback-service/feedback_service/: __init__.py  models.py  repository.py  service.py
services/feedback-service/tests/: README.md  test_feedback_service.py
services/knowledge-service/: README.md  pyproject.toml
services/knowledge-service/app/: README.md
services/knowledge-service/knowledge_service/: __init__.py  retrieval.py  service.py
services/knowledge-service/tests/: README.md  test_retrieval.py
services/model-runtime/: README.md  pyproject.toml
services/model-runtime/model_runtime/: __init__.py  client.py  providers.py  service.py
services/model-runtime/tests/: test_fake_provider.py
services/mukti-agent/: README.md  pyproject.toml
services/mukti-agent/app/: README.md
services/mukti-agent/mukti_agent/: __init__.py  analyzer.py  service.py
services/mukti-agent/tests/: README.md  test_analyzer.py
services/operator-console/src/: README.md
services/operator-console/tests/: README.md
services/orchestrator/: pyproject.toml
services/orchestrator/app/: README.md  __init__.py  config.py  main.py
services/orchestrator/app/adapters/: __init__.py  db.py  models.py  repository.py
services/orchestrator/app/runtime/: __init__.py  orchestrator.py  planner.py  state_machine.py  step_executor.py
services/orchestrator/app/services/: execution_service.py
services/orchestrator/app/support/: mukti_input.py
services/orchestrator/app/tests/: test_governance_incident.py  test_orchestrator_happy_path.py  test_phase4_gather_evidence.py  test_phase5_model_reasoning.py  test_phase6_feedback_mukti.py  test_planner.py  test_postgres_repository_integration.py  test_repository_mapping.py  test_state_machine.py  test_step_executor.py
services/orchestrator/tests/: README.md
services/policy-engine/: README.md  pyproject.toml
services/policy-engine/app/: README.md
services/policy-engine/policy_engine/: __init__.py  evaluator.py  service.py
services/policy-engine/tests/: README.md  test_evaluator.py
services/tool-runtime/: README.md  pyproject.toml
services/tool-runtime/app/: README.md
services/tool-runtime/tests/: README.md  test_registry_executor.py
services/tool-runtime/tool_runtime/: __init__.py  executor.py  registry.py  service.py
tests/contract/: README.md
tests/end_to_end/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
