[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-service"
version = "0.0.0"
description = "Retrieval over local corpus for Agentic AI Platform (Phase 4)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "common-schemas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["knowledge_service*"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../../packages/common-schemas/src"]
